infrastructure/k8s/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector: 
    app: auth-postgres
  ports:
    - name: auth-postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
